Improved error trapping on dashboard

--- a/bims/static/css/map.css
+++ b/bims/static/css/map.css
@@ -2432,3 +2432,22 @@ div:hover::-webkit-scrollbar {
 
 }
 
+
+#fish-ssdd-records-sites .col-6 {
+    padding: 0.25rem;
+    border: 1px solid #d3d4d1;
+    padding-left: 0.5rem;
+    font-size: 12px;
+}
+
+#fish-ssdd-records-sites .col-12.sub-title {
+    padding: 0.25rem;
+    border: 1px solid #d3d4d1;
+    font-size: 12px;
+    font-weight: 700;
+}
+
+#fish-ssdd-records-sites .title_column {
+     font-weight: 700;
+}
+
