--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -177,8 +177,17 @@
                                                  class="site-details-header">
                                                 SA Ecoregion
                                             </div>
-                                            <div class="col-12"
-                                                 id="sa_ecoregions"></div>
+                                            <div class="col-12" id="sa-ecoregions"></div>
+
+                                        </div>
+                                        <div class="card-body" id="fish-ssdd-records-sites">
+                                            <div class="col-12 sub-title"
+                                                 class="site-details-header">
+                                                Records and Sites
+                                            </div>
+                                            <div class="col-12" id="records-sites">
+
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
