Added table to dashboard

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -161,8 +161,7 @@
                                         <div class="card-body" id="fish-ssdd-site-details">
                                             <div class="col-12"
                                                  id="overview"></div>
-                                            <div class="col-12 sub-title"
-                                                 class="site-details-header">
+                                            <div class="col-12 sub-title site-details-header">
                                                 Catchments
                                             </div>
                                             <div class="col-12"
@@ -181,11 +180,26 @@
 
                                         </div>
                                         <div class="card-body" id="fish-ssdd-records-sites">
-                                            <div class="col-12 sub-title"
-                                                 class="site-details-header">
+                                            <div class="col-12 sub-title site-details-header">
                                                 Records and Sites
                                             </div>
                                             <div class="col-12" id="records-sites">
+
+                                            </div>
+                                        </div>
+                                        <div class="card-body" id="fish-ssdd-origins">
+                                           <div class="col-12">
+                                            <div class="row">
+
+                                                    <div class="col-6 sub-title site-details-header">
+                                                        Origin
+                                                    </div>
+                                                    <div class="col-6 sub-title site-details-header">
+                                                        Number of occurrence records
+                                                    </div>
+                                                <div class="col-12" id="origins">
+                                            </div>
+                                            <div class="col-12" id="origins">
 
                                             </div>
                                         </div>
