Data compiled from backend

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -187,35 +187,54 @@
 
                                             </div>
                                         </div>
-                                        <div class="card-body" id="fish-ssdd-origins">
-                                           <div class="col-12">
-                                            <div class="row">
+                                        <div class="card-body"
+                                             id="fish-ssdd-origins">
+                                            <div class="col-12">
+                                                <div class="row">
 
                                                     <div class="col-6 sub-title site-details-header">
                                                         Origin
                                                     </div>
                                                     <div class="col-6 sub-title site-details-header">
+                                                        Number of occurrence
+                                                        records
+                                                    </div>
+                                                    <div class="col-12"
+                                                         id="origins">
+                                                    </div>
+
+                                                </div>
+                                            </div>
+                                        </div>
+                                         <div class="card-body"
+                                             id="fish-ssdd-origins">
+                                            <div class="col-12">
+                                                <div class="row">
+
+                                                    <div class="col-6 sub-title site-details-header">
+                                                        Conservation Status
+                                                    </div>
+                                                    <div class="col-6 sub-title site-details-header">
                                                         Number of occurrence records
                                                     </div>
-                                                <div class="col-12" id="origins">
-                                            </div>
-                                            <div class="col-12" id="origins">
+                                                    <div class="col-12" id="origins">
 
+                                                    </div>
+
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
+                                <div class="row">
+                                    {# Occurrence Data #}
+                                    <div class="col-lg-12"
+                                         id="fish-ssdd-occurrence-data">
+                                    </div>
                                 </div>
                             </div>
-                            <div class="row">
-                                {# Occurrence Data #}
-                                <div class="col-lg-12"
-                                     id="fish-ssdd-occurrence-data">
-                                </div>
-                            </div>
-                        </div>
 
-                        <div class="col-lg-8 dashboard-graph-wrapper">
-                        </div>
+                            <div class="col-lg-8 dashboard-graph-wrapper">
+                            </div>
                     </div>
                 </div>
             </div>
