Update frontend to render data

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -206,8 +206,7 @@
                                                 </div>
                                             </div>
                                         </div>
-                                         <div class="card-body"
-                                             id="fish-ssdd-origins">
+                                         <div class="card-body" id="fish-ssdd-conservation-status">
                                             <div class="col-12">
                                                 <div class="row">
 
@@ -217,7 +216,7 @@
                                                     <div class="col-6 sub-title site-details-header">
                                                         Number of occurrence records
                                                     </div>
-                                                    <div class="col-12" id="origins">
+                                                    <div class="col-12" id="ssdd-conservation-status">
 
                                                     </div>
 
