--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -104,7 +104,7 @@
     </table>
 </script>
 
-{#<script type="text/html" id="detailed-site-dashboard">#}
+<script type="text/html" id="detailed-site-dashboard">
 <div class="loading-dashboard">
 	<img src="/static/img/small-loading.svg" width="250"
 		 alt="Loading view">
@@ -259,7 +259,7 @@
 		</div>
 	</div>
 </div>
-{#</script>#}
+</script>
 
 
 
