Added origin chart without labels

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -260,10 +260,10 @@
 										<div class="col"
 									</div>
 									<div class="col-3 fish-ssdd-pie-chart">
-										<canvas id="fish-ssdd-data-summary-origin">
+										<canvas id="fish-ssdd-origin-pie">
 										</canvas>
 									</div>
-									
+
 								</div>
 							</div>
 						</div>
