--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -19,9 +19,9 @@
 }
 
 .loading-dashboard {
-    margin-top: 60px;
     text-align: center;
     border: 0;
+    background-color: rgba(255,255,255,0.97);
 }
 
 .loading-dashboard img {
