--- a/bims/static/css/detailed_dashboard.css
+++ b/bims/static/css/detailed_dashboard.css
@@ -146,3 +146,21 @@
     text-align: center;
     min-height: 100px;
 }
+
+.fish-ssdd-titles {
+    text-align: center;
+    font-size: 12px;
+    padding: 0.5rem;
+}
+
+.fish-ssdd-legends {
+    font-style: italic;
+    font-size: 9px;
+    letter-spacing: 0.2px;
+    color: #4a4a4a;
+    padding-bottom: 0.5rem;
+}
+
+.fish-ssdd-legends .col-3 {
+    padding-left:9%;
+}
