--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -257,17 +257,11 @@
 								</div>
 								<div class="card-body">
 									<div id="data-summary">
-										<div class="row">
-											<div class="col-3 fish-ssdd-titles">Origin</div>
-											<div class="col-3 fish-ssdd-titles">Endemism</div>
-											<div class="col-3 fish-ssdd-titles">Conservation Status</div>
-											<div class="col-3 fish-ssdd-titles">Sampling Method</div>
-										</div>
-										<div class="row">
-											<div class="col-3" id="fish-ssdd-origin-legend">Origin</div>
-											<div class="col-3" id="fish-ssdd-endemism-legend">Endemism</div>
-											<div class="col-3" id="fish-ssdd-cons_status-legend"></div>
-											<div class="col-3" id="fish-ssdd-sampling-method-legend"></div>
+										<div class="row fish-ssdd-legends">
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-origin-legend"></div>
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-endemism-legend"></div>
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-cons_status-legend"></div>
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-sampling-method-legend"></div>
 										</div>
 										<div class="row">
 											<div class="col-3 fish-ssdd-pie-chart">
@@ -286,6 +280,12 @@
 	{#											<canvas id="fish-ssdd-sampling-method-pie">#}
 	{#											</canvas>#}
 											</div>
+										</div>
+										<div class="row">
+											<div class="col-3 fish-ssdd-titles">Origin</div>
+											<div class="col-3 fish-ssdd-titles">Endemism</div>
+											<div class="col-3 fish-ssdd-titles">Conservation Status</div>
+											<div class="col-3 fish-ssdd-titles">Sampling Method</div>
 										</div>
 									</div>
 								</div>
