Compiled data from backend for multi-stack graph, added styles, created data in frontend

--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -299,7 +299,7 @@
 							<div class="card">
 								<div class="card-header">
 									<div class="card-header-title pull-left d-inline">
-										Occurrences
+										Taxa
 									</div>
 								</div>
 								<div class="card-body">
