--- a/bims/templates/map_page/dashboard-templates.html
+++ b/bims/templates/map_page/dashboard-templates.html
@@ -11,8 +11,8 @@
             style="float: right"><i class="fa fa-times pull-right"></i>
     </button>
     <div class="container dashboard-wrapper">
-        <div class="container row">
-            <div class="col-lg-4">
+        <div>
+            <div class="col-lg-4 col-4">
                 <h5 class="dd-title" style="float: left">Distribution</h5>
                 <button id="export-taxasite-map" style="float: right"
                         class="btn btn-default btn-element-download"><i
@@ -26,7 +26,7 @@
                 <div class="overview-name-taxonomy-table dashboard-table"
                      style="margin-top: 10px; margin-bottom: 10px"></div>
             </div>
-            <div class="col-lg-8 dashboard-graph-wrapper">
+            <div class="col-lg-8 col-8 dashboard-graph-wrapper">
                 <div class="row">
                     <div class="col-lg-12">
                         <h5 class="dd-title">Records per area</h5>
@@ -105,153 +105,237 @@
 </script>
 
 <script type="text/html" id="detailed-site-dashboard">
-    <div class="loading-dashboard">
-        <img src="/static/img/small-loading.svg" width="250"
-             alt="Loading view">
-        <div class="loading-dashboard-subtitle">
-            Loading...
-        </div>
-    </div>
-    <button class="btn btn-primary btn-dashboard close-dashboard"
-            style="float: right"><i class="fa fa-times pull-right"></i>
-    </button>
-    <div class="container dashboard-wrapper">
-        <div style="height: 32px">
-        <div style="height: 32px">
-        </div>
-        <div class="container row">
-            <div class="col-lg-4">
-                <div id="site-markers"></div>
-                <div class="card">
-                    <div class="card-header">
-                        <div class="card-header-title pull-left d-inline">
-                            Overview
-                        </div>
-                        <button id="export-locationsite-map"
-                                class="btn btn-default pull-right"><i
-                                class="fa fa-download"></i></button>
-                    </div>
-                    <div class="card-body locationsite-map-wrapper">
-                        <div id="locationsite-map" class="map"
-                             style="height: 300px; width: 100%;"></div>
-                        <div id="overview-dashboard-table"
-                             class="dashboard-table"
-                             style="margin-top: 10px; margin-bottom: 10px">
-                            <table class="table">
-                                <tr>
-                                    <td id="site-name-label">Name</td>
-                                    <td id="site-name"></td>
-                                </tr>
-                                <tr>
-                                    <td>Total Records</td>
-                                    <td id="total-records">0</td>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+	<div id="detailed-site-dashboard-wrapper" style="padding: 1rem;">
+		<div class="loading-dashboard">
+			<img src="/static/img/small-loading.svg" width="250"
+				 alt="Loading view">
+			<div class="loading-dashboard-subtitle">
+				Loading...
+			</div>
+		</div>
+		<button class="btn btn-primary btn-dashboard close-dashboard"
+				style="float: right"><i class="fa fa-times pull-right"></i>
+		</button>
+		<div class="container dashboard-wrapper">
+			<div class=" row">
+				<div class="col-lg-4">
+					{# Distribution #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-distribution">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Distribution
+									</div>
+									<button id="export-locationsite-map"
+											class="btn btn-default pull-right">
+										<i
+												class="fa fa-download"></i>
+									</button>
+								</div>
+								<div class="card-body locationsite-map-wrapper">
+									<div id="locationsite-map"
+										 class="map"
+										 style="height: 300px; width: 100%;">
+									</div>
 
-                <div class="card" style="margin-top: 20px">
-                    <div class="card-header">
-                        <div class="pull-left d-inline">
-                            Occurence data
-                        </div>
-                        <button class="btn btn-info download-as-csv pull-right">
-                            Download as
-                            CSV
-                        </button>
-                    </div>
-                    <div class="card-body">
-                        <div class="dashboard-table">
-                            <table id="occurence-table" class="table">
-                                <tr>
-                                    <th>Taxon</th>
-                                    <th>Category</th>
-                                    <th>Records</th>
-                                </tr>
-                            </table>
-                        </div>
-                    </div>
-                </div>
+								</div>
+							</div>
+						</div>
+					</div>
+					{# Overview #}
+					<div class="row" id="#fish-ssdd-site-details">
+						<div class="col-lg-12" id="fish-ssdd-overview">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Overview
+									</div>
+								</div>
+								{# Overview Site details #}
+								<div class="card-body"
+									 id="fish-ssdd-site-details">
+									<div class="col-12"
+										 id="overview"></div>
+									<div class="col-12 sub-title site-details-header">
+										Catchments
+									</div>
+									<div class="col-12"
+										 id="catchments"></div>
+									<div class="col-12 sub-title"
+										 class="site-details-header">
+										Water Management Areas
+									</div>
+									<div class="col-12"
+										 id="sub_water_management_areas"></div>
+									<div class="col-12 sub-title"
+										 class="site-details-header">
+										SA Ecoregion
+									</div>
+									<div class="col-12"
+										 id="sa-ecoregions"></div>
 
-                {% if is_sass_enabled %}
-                      <div class="container-fluid sass-dashboard-button" style="padding-top: 20px; color: white; padding-left: 0; padding-right: 0">
-                          <a class="btn right-panel-button right-panel-last-button fbis-button sass-button" style="margin: 0 !important;">Open SASS Dashboard</a>
-                      </div>
-                {% endif %}
+								</div>
+								<div class="card-body"
+									 id="fish-ssdd-records-sites">
+									<div class="col-12 sub-title site-details-header">
+										Records and Sites
+									</div>
+									<div class="col-12" id="records-sites">
 
-            </div>
-            <div class="col-lg-8" id="dashboard-graph-wrapper">
-                <div class="card">
-                    <div class="card-header">
-                        <div class="d-inline card-header-title pull-left">
-                            Collections Chart
-                        </div>
-                        <button class="btn btn-default pull-right download-origin-chart">
-                            <i class="fa fa-download"></i></button>
-                    </div>
-                    <div class="card-body">
-                        <div class="container-fluid no-padding">
-                            <div class="row detailed-table-chart">
-                                <div class="col-md-4 no-padding">
-                                    <canvas id="collection-category-graph"></canvas>
-                                    <div class="chart-label">Origin</div>
-                                </div>
-                                <div class="col-md-4 no-padding">
-                                    <canvas id="cons-status-graph"></canvas>
-                                    <div class="chart-label">Cons status</div>
-                                </div>
-                                <div class="col-md-4 no-padding">
-                                    <canvas id="sampling-method-graph"></canvas>
-                                    <div class="chart-label">Sampling method
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+									</div>
+								</div>
+								<div class="card-body"
+									 id="fish-ssdd-origins">
+									<div class="col-12">
+										<div class="row">
+											<div class="col-6 sub-title site-details-header">
+												Origin
+											</div>
+											<div class="col-6 sub-title site-details-header">
+												Number of occurrence
+												records
+											</div>
+											<div class="col-12"
+												 id="origins">
+											</div>
 
-                <div class="row"
-                     style="margin: 0 !important; margin-top: 15px !important;">
-                    <div class="card full-width">
-                        <div class="card-header">
-                            <div class="d-inline card-header-title pull-left">
-                                Records Timeline Graph
-                            </div>
-                            <button class="btn btn-default pull-right download-record-timeline">
-                                <i class="fa fa-download"></i></button>
-                        </div>
-                        <div class="card-body">
-                            <div id="record-timeline-wrapper"
-                                 class="chart-wrapper">
-                                <canvas id="records-timeline-graph"
-                                        height="200px"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row"
-                     style="margin: 0 !important; margin-top: 15px !important; margin-bottom: 20px !important;">
-                    <div class="card full-width">
-                        <div class="card-header">
-                            <div class="d-inline card-header-title pull-left">
-                                Collection Timeline Graph
-                            </div>
-                            <button class="btn btn-default pull-right download-collection-timeline">
-                                <i class="fa fa-download"></i></button>
-                        </div>
-                        <div class="card-body">
-                            <div id="collection-timeline-wrapper"
-                                 class="chart-wrapper">
-                                <canvas id="collection-timeline-graph"
-                                        height="200px"></canvas>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+										</div>
+									</div>
+								</div>
+								<div class="card-body"
+									 id="fish-ssdd-conservation-status">
+									<div class="col-12">
+										<div class="row">
+											<div class="col-6 sub-title site-details-header">
+												Conservation Status
+											</div>
+											<div class="col-6 sub-title site-details-header">
+												Number of occurrence records
+											</div>
+											<div class="col-12"
+												 id="ssdd-conservation-status">
+
+											</div>
+										</div>
+									</div>
+								</div>
+							</div>
+							<div class="row">
+
+							</div>
+						</div>
+					</div>
+					{# Occurence Data #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-occurrence-data">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Occurence Data
+									</div>
+								</div>
+								<div class="card-body">
+									<div id="occurrence-data">
+
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+				</div>
+				<div class="col-lg-8 dashboard-graph-wrapper">
+					{# Data Summary #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-data-summary">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Occurence Data
+									</div>
+								</div>
+								<div class="card-body">
+									<div id="data-summary">
+										<div class="row fish-ssdd-legends">
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-origin-legend"></div>
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-endemism-legend"></div>
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-cons_status-legend"></div>
+											<div class="col-3" class="fish-ssdd-legend" id="fish-ssdd-sampling-method-legend"></div>
+										</div>
+										<div class="row">
+											<div class="col-3 fish-ssdd-pie-chart">
+												<canvas id="fish-ssdd-origin-pie">
+												</canvas>
+											</div>
+											<div class="col-3 fish-ssdd-pie-chart">
+												<canvas id="fish-ssdd-endemism-pie">
+												</canvas>
+											</div>
+											<div class="col-3 fish-ssdd-pie-chart">
+												<canvas id="fish-ssdd-conservation-status-pie">
+												</canvas>
+											</div>
+											<div class="col-3 fish-ssdd-pie-chart">
+	{#											<canvas id="fish-ssdd-sampling-method-pie">#}
+	{#											</canvas>#}
+											</div>
+										</div>
+										<div class="row">
+											<div class="col-3 fish-ssdd-titles">Origin</div>
+											<div class="col-3 fish-ssdd-titles">Endemism</div>
+											<div class="col-3 fish-ssdd-titles">Conservation Status</div>
+											<div class="col-3 fish-ssdd-titles">Sampling Method</div>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+
+					</div>
+					{# Occurrences per year line chart #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-occurrences-line-chart">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inline">
+										Occurrences
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="col-12 fish-ssdd-occurrences-line-chart">
+										<canvas id="fish-ssdd-occurrences-line-chart-canvas">
+										</canvas>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+					{# origin per year bar chart #}
+					<div class="row">
+						<div class="col-lg-12" id="fish-ssdd-origin-bar-chart">
+							<div class="card">
+								<div class="card-header">
+									<div class="card-header-title pull-left d-inbar">
+										Origin
+									</div>
+								</div>
+								<div class="card-body">
+									<div class="col-12 fish-ssdd-origin-bar-chart">
+										<canvas id="fish-ssdd-origin-bar-chart-canvas">
+										</canvas>
+									</div>
+
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+	</div>
 </script>
+
 
 
