--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -84,7 +84,7 @@
                             <div class="form-check">
                                 <input class="form-check-input observed"
                                        type="checkbox"
-                                       value=""
+                                       value="True"
                                        name="{{ taxon.taxon_id }}-observed">
                                 <label class="form-check-label">
                                 </label>
