--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -21,7 +21,8 @@
 {% endblock %}
 
 {% block body_content %}
-    <form action="{{ request.path }}" method="post" id="fish-form">
+    <form action="{{ request.path }}" method="post" id="fish-form"
+          class="needs-validation" novalidate>
         {% csrf_token %}
         <input type="hidden" name="site-id" value="{{ site_id }}">
         <div class="body-form container">
@@ -30,22 +31,31 @@
                 {% if location_site_code %}{{ location_site_code }} {% else %}
                     {{ location_site_name }}{% endif %}
             </div>
+            <div class="alert alert-danger" role="alert" style="display: none;">
+
+            </div>
             <div id="fish-map"></div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Date</label>
+                       class="col-sm-2 col-form-label col-form-label required-text">Date</label>
                 <div class="col-sm-10">
                     <input type="text" name="date"
                            class="form-control form-control-sm"
-                           id="date" placeholder="">
+                           id="date" placeholder="" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid date
+                    </div>
                 </div>
             </div>
             <div class="form-group row even-row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Collector</label>
+                       class="col-sm-2 col-form-label col-form-label required-text">Collector</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control form-control-sm"
-                           id="collector" placeholder="" name="collector">
+                           id="collector" placeholder="" name="collector" required>
+                    <div class="invalid-feedback">
+                        Please provide a collector
+                    </div>
                     <input type="hidden" name="collector_id" id="collector_id">
                 </div>
             </div>
@@ -126,7 +136,7 @@
                         Confirm Submit
                     </div>
                     <div class="modal-body">
-                        Are you sure you want to submit the SASS form?
+                        Are you sure you want to submit the Fish form?
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-default"
