--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -31,7 +31,8 @@
                 {% if location_site_code %}{{ location_site_code }} {% else %}
                     {{ location_site_name }}{% endif %}
             </div>
-            <div class="alert alert-danger" role="alert" style="display: none;">
+            <div class="alert alert-danger" role="alert"
+                 style="display: none;">
 
             </div>
             <div id="fish-map"></div>
@@ -52,11 +53,21 @@
                        class="col-sm-2 col-form-label col-form-label required-text">Collector</label>
                 <div class="col-sm-10">
                     <input type="text" class="form-control form-control-sm"
-                           id="collector" placeholder="" name="collector" required>
+                           id="collector" placeholder="" name="collector"
+                           required>
                     <div class="invalid-feedback">
                         Please provide a collector
                     </div>
                     <input type="hidden" name="collector_id" id="collector_id">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="date"
+                       class="col-sm-2 col-form-label col-form-label">Study Reference</label>
+                <div class="col-sm-10">
+                    <input type="text" name="study_reference"
+                           class="form-control form-control-sm"
+                           placeholder="">
                 </div>
             </div>
             <div class="form-group row">
