--- a/bims/templates/fish_form_page.html
+++ b/bims/templates/fish_form_page.html
@@ -63,11 +63,25 @@
             </div>
             <div class="form-group row">
                 <label for="date"
-                       class="col-sm-2 col-form-label col-form-label">Study Reference</label>
+                       class="col-sm-2 col-form-label col-form-label">Study
+                    Reference</label>
                 <div class="col-sm-10">
                     <input type="text" name="study_reference"
                            class="form-control form-control-sm"
                            placeholder="">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="date"
+                       class="col-sm-2 col-form-label col-form-label">Reference Category</label>
+                <div class="col-sm-10">
+                    <select class="form-control"
+                            name="reference_category">
+                        <option value=""> Not specified</option>
+                        {% for category in reference_category %}
+                            <option value="{{ category.name }}"> {{ category.name }} </option>
+                        {% endfor %}
+                    </select>
                 </div>
             </div>
             <div class="form-group row">
